# rust_clean_architecture

./: Cargo.toml  Dockerfile  LICENSE  README.MD  docker-compose.yml
core/diesel/: .env  Cargo.toml  diesel.toml  lib.rs
core/diesel/connection/: main.rs
core/diesel/migrations/1725729655_create_books/: up.sql
core/diesel/tables/: schema.rs
core/rocket/: Cargo.toml
core/rocket/server/: main.rs
features/: Cargo.toml
features/books/: mod.rs
features/books/data/: mod.rs
features/books/data/data_sources/local/dao/: books_dao.rs  mod.rs
features/books/data/model/: book.rs
features/books/data/repository/: book_repository_impl.rs  mod.rs
features/books/domain/: mod.rs
features/books/domain/entity/: book.rs
features/books/domain/repository/: book_repository.rs
features/books/domain/usecases/: create_book.rs  delete_book.rs  get_book.rs  get_books.rs  mod.rs
